--- a/ex_css/float/layout/layout6.html
+++ b/ex_css/float/layout/layout6.html
@@ -6,6 +6,37 @@
     <style>
         /* 여백 초기화 */
         body, div, ul, li, dl, dt, ol, h1, h2, h3, h4, h5, h6, input, fieldset, legend, p, select, table, th, td, tr, textarea, button, form {margin: 0; padding: 0;}
+        #header {
+            width: 100%;
+            height: 50px;
+            background-color: brown;
+        }
+        #banner {
+            width: 100%;
+            height: 200px;
+            background-color: rgb(252, 84, 84);
+        }
+        #content {
+            width: 100%;
+            height: auto;
+            min-height: 400px;
+            background-color: rgb(153, 12, 12);
+        }
+        #footer {
+            width: 100%;
+            height: 50px;
+            background-color: rgb(71, 6, 6);
+        }
+        .contaniner{
+            background-color: rgb(34, 129, 173);
+            width: 50%;
+            height: auto;
+            margin: 0 auto;
+            text-align: center;
+            color: white;
+            line-height: 50px;
+            text-transform: uppercase;
+        }
     </style>
 </head>
 <body>
